perf: use Map.copyOf for better performing immutable map
Improvements:
- Replace Collections.unmodifiableMap() with Map.copyOf() for signature validators
- Replace Collections.emptyMap() with Map.of() for empty claims map
- Remove unused Collections import

Performance benefits:
- True immutability (creates new map, not wrapper)
- No indirection overhead on Map.get() operations
- Optimized compact internal representation
- Null-safe construction (rejects nulls at build time)

Technical details:
- Collections.unmodifiableMap(): O(1) + wrapper overhead per lookup
- Map.copyOf(): O(1) direct lookup, no wrapper overhead
- Uses Java 10+ optimized immutable collections implementation
- Better suited for read-heavy access patterns like validator lookup

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>